; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_http.c_terminate_chunked_close_cb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_http.c_terminate_chunked_close_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_connection = type { i32 }
%struct.terminate_state = type { i32, i32, i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evhttp_connection*, i8*)* @terminate_chunked_close_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @terminate_chunked_close_cb(%struct.evhttp_connection* %0, i8* %1) #0 {
  %3 = alloca %struct.evhttp_connection*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.terminate_state*, align 8
  store %struct.evhttp_connection* %0, %struct.evhttp_connection** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.terminate_state*
  store %struct.terminate_state* %7, %struct.terminate_state** %5, align 8
  %8 = load %struct.terminate_state*, %struct.terminate_state** %5, align 8
  %9 = getelementptr inbounds %struct.terminate_state, %struct.terminate_state* %8, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = load %struct.terminate_state*, %struct.terminate_state** %5, align 8
  %11 = getelementptr inbounds %struct.terminate_state, %struct.terminate_state* %10, i32 0, i32 3
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %2
  %15 = load %struct.terminate_state*, %struct.terminate_state** %5, align 8
  %16 = getelementptr inbounds %struct.terminate_state, %struct.terminate_state* %15, i32 0, i32 2
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @evhttp_request_free(i32* %17)
  %19 = load %struct.terminate_state*, %struct.terminate_state** %5, align 8
  %20 = getelementptr inbounds %struct.terminate_state, %struct.terminate_state* %19, i32 0, i32 2
  store i32* null, i32** %20, align 8
  %21 = load %struct.terminate_state*, %struct.terminate_state** %5, align 8
  %22 = getelementptr inbounds %struct.terminate_state, %struct.terminate_state* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @event_base_loopexit(i32 %23, i32* null)
  br label %25

25:                                               ; preds = %14, %2
  ret void
}

declare dso_local i32 @evhttp_request_free(i32*) #1

declare dso_local i32 @event_base_loopexit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
